--- a/res/layout/mating.xml
+++ b/res/layout/mating.xml
@@ -2,41 +2,150 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:weightSum="1">
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Calving Outcome"
+            android:id="@+id/textView47"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.05"/>
     <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" android:layout_gravity="center_horizontal">
-        <Button
+            android:layout_height="match_parent"
+            android:layout_weight="0.05" android:id="@+id/layo">
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mate"
-                android:id="@+id/button8" android:layout_alignParentBottom="true" android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_toEndOf="@+id/textView47" android:layout_alignTop="@+id/button9"
-                android:layout_toRightOf="@+id/textView47"/>
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Return"
-                android:id="@+id/button9" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" android:layout_toLeftOf="@+id/textView47"
-                android:layout_toStartOf="@+id/textView47"/>
+                android:text="DOB:"
+                android:id="@+id/textView50"
+                android:layout_below="@+id/textView58"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:id="@+id/textView47" android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"/>
-        <EditText
+                android:id="@+id/textView52"
+                android:layout_alignTop="@+id/textView50"
+                android:layout_alignLeft="@+id/ratingBar8"
+                android:layout_alignStart="@+id/ratingBar8"/>
+        <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/txt4date"
-                android:hint="Touch here to select a date"
-                android:layout_below="@+id/textView47"
+                android:text="Dam:"
+                android:id="@+id/textView53"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Text"
+                android:id="@+id/textView54"
+                android:layout_alignBottom="@+id/textView53"
+                android:layout_alignLeft="@+id/textView52"
+                android:layout_alignStart="@+id/textView52"
+                android:layout_alignParentTop="true"
+                android:layout_alignRight="@+id/textView52"
+                android:layout_alignEnd="@+id/textView52"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sire:"
+                android:id="@+id/textView55"
+                android:layout_below="@+id/textView53"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Text"
+                android:id="@+id/textView56"
+                android:layout_alignBottom="@+id/textView55"
+                android:layout_alignLeft="@+id/textView54"
+                android:layout_alignStart="@+id/textView54"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="StarRating:"
+                android:id="@+id/textView57"
+                android:layout_below="@+id/textView55"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+        <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar7"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_alignTop="@+id/textView57"
+                android:layout_centerHorizontal="true"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="StarsAcross:"
+                android:id="@+id/textView58"
+                android:layout_below="@+id/textView57"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+        <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar8"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_alignTop="@+id/textView58"
+                android:layout_alignLeft="@+id/ratingBar7"
+                android:layout_alignStart="@+id/ratingBar7"/>
+        <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Set Date"
+                android:id="@+id/SetDate"
+                android:onClick="SetDate"
+                android:layout_alignTop="@+id/textView52"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"/>
+        <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back"
+                android:id="@+id/button8"
+                android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_alignRight="@+id/textView47"
-                android:layout_alignEnd="@+id/textView47"/>
+                android:layout_marginBottom="66dp"
+                android:layout_toLeftOf="@+id/textView60"
+                android:layout_toStartOf="@+id/textView60"/>
+        <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Confirm"
+                android:id="@+id/button9"
+                android:layout_alignTop="@+id/button8"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_toRightOf="@+id/textView52"
+                android:layout_toEndOf="@+id/textView52"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Date:"
+                android:id="@+id/textView59"
+                android:layout_below="@+id/textView50"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView60"
+                android:layout_below="@+id/textView52"
+                android:layout_alignLeft="@+id/textView52"
+                android:layout_alignStart="@+id/textView52"/>
     </RelativeLayout>
 </LinearLayout>
