--- a/res/layout/finish.xml
+++ b/res/layout/finish.xml
@@ -4,6 +4,14 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Large Text"
+            android:id="@+id/textView48"
+            android:layout_marginTop="139dp"
+            android:layout_below="@+id/textView46" android:layout_toEndOf="@+id/button11"/>
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" android:layout_gravity="center_horizontal">
@@ -34,17 +42,6 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Large Text"
                 android:id="@+id/textView46"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
-                android:id="@+id/textView48" android:layout_below="@+id/textView46"
-                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
-                android:layout_marginTop="48dp" android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"/>
+                android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
     </RelativeLayout>
 </LinearLayout>
