--- a/res/layout/hello.xml
+++ b/res/layout/hello.xml
@@ -9,23 +9,22 @@
 	<LinearLayout
 			android:orientation="horizontal"
 			android:layout_width="fill_parent"
-			android:layout_height="96dp"
-			android:layout_weight="0.14"
+			android:layout_height="82dp"
 			android:id="@+id/lay"
 			android:weightSum="1">
 		<TextView android:layout_width="wrap_content"
 				  android:layout_height="37dp"
 				  android:textAppearance="?android:attr/textAppearanceLarge"
-				  android:text="Read Ear Tag"
+				  android:text="Read Ear Tag             "
 				  android:id="@+id/textView3"
 				  android:layout_weight="0.09"/>
 		<Button
-                android:layout_width="94dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Scan"
                 android:onClick="scanNow"
                 android:id="@+id/scanButn"
-				android:layout_weight="0.01"/>
+                android:layout_weight="0.67"/>
 	</LinearLayout>
 	<LinearLayout
 			android:orientation="horizontal"
@@ -40,26 +39,53 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Enter ID"
                 android:id="@+id/textView"
-				android:layout_weight="0.33"/>
+		/>
 		<EditText
-				android:layout_width="125dp"
+				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:hint="Enter Jumbo"
 				android:id="@+id/editText2"/>
+		<Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Search"
+                android:onClick="search"
+                android:id="@+id/button"
+				android:layout_weight="0.63"/>
 	</LinearLayout>
-	<Button
-			android:layout_width="99dp"
-			android:layout_height="wrap_content"
-			android:text="Search"
-			android:onClick="search"
-			android:id="@+id/button"
-			android:layout_gravity="center_horizontal"/>
 
-	<Button android:layout_width="99dp"
-			android:layout_height="wrap_content"
-			android:text="Bull List"
-			android:onClick="bullList"
-			android:id="@+id/button2"
-			android:layout_gravity="center_horizontal"
-			android:layout_weight="0.04"/>
+	<LinearLayout
+			android:orientation="horizontal"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" android:weightSum="1" android:layout_weight="0.07">
+		<TextView
+				android:layout_width="204dp"
+				android:layout_height="wrap_content"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:text="View Active Bulls          "
+				android:id="@+id/textView48"/>
+		<Button android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="Bull List"
+				android:onClick="bullList"
+				android:id="@+id/button2"
+				android:layout_weight="0.50"/>
+	</LinearLayout>
+	<LinearLayout
+			android:orientation="horizontal"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content" android:layout_weight="0.21">
+		<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textAppearance="?android:attr/textAppearanceLarge"
+				android:text="View Herd                    "
+				android:id="@+id/textView63"/>
+		<Button
+				android:layout_width="100dp"
+				android:layout_height="wrap_content"
+				android:text="My Herd"
+				android:onClick="MyHerd"
+				android:id="@+id/button10"/>
+	</LinearLayout>
 </LinearLayout>
