--- a/res/layout/popup2.xml
+++ b/res/layout/popup2.xml
@@ -29,8 +29,7 @@
                 android:text="It's a PopupWindow"
                 android:layout_gravity="center_horizontal"
                 android:id="@+id/textView18"
-                android:layout_alignParentTop="true"
-                android:layout_alignStart="@+id/textView19"/>
+                android:layout_alignParentTop="true" android:layout_toEndOf="@+id/dismiss"/>
         <Button
                 android:id="@+id/dismiss"
                 android:layout_width="wrap_content"
@@ -54,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView19"
-                android:layout_alignTop="@+id/textView65" android:layout_toStartOf="@+id/select"/>
+                android:layout_below="@+id/textView18" android:layout_alignStart="@+id/textView18"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -68,61 +67,60 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView21"
-                android:layout_below="@+id/textView20"
-                android:layout_alignLeft="@+id/textView20"
-                android:layout_alignStart="@+id/textView20"/>
+                android:layout_below="@+id/textView20" android:layout_alignStart="@+id/textView20"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Jumbo:"
+                android:text="Code:"
                 android:id="@+id/textView64"
                 android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sex:"
+                android:text="Name:"
                 android:id="@+id/textView65" android:layout_below="@+id/textView18"
                 android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dob:"
+                android:text="Breed:"
                 android:id="@+id/textView66" android:layout_below="@+id/textView19"
                 android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Breed:"
+                android:text="Index   €"
                 android:id="@+id/textView67"
                 android:layout_below="@+id/textView66" android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Replace:         €"
+                android:text="Star Rating:"
                 android:id="@+id/textView68" android:layout_below="@+id/textView21"
                 android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:id="@+id/textView69" android:layout_below="@+id/textView21"
-                android:layout_alignStart="@+id/textView21"/>
+                android:id="@+id/textView69"
+                android:layout_alignBaseline="@+id/textView76" android:layout_alignBottom="@+id/textView76"
+                android:layout_centerHorizontal="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Terminal:       €"
+                android:text="Star Across:"
                 android:id="@+id/textView70" android:layout_below="@+id/textView68"
                 android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
-                android:id="@+id/textView71" android:layout_below="@+id/textView69"
-                android:layout_alignStart="@+id/textView69"/>
+                android:id="@+id/textView71"
+                android:layout_alignStart="@+id/textView69" android:layout_below="@+id/textView73"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Calf Diff:"
+                android:text="Carcass Wt:"
                 android:id="@+id/textView72" android:layout_below="@+id/textView70"
                 android:layout_alignParentStart="true"/>
         <TextView
@@ -134,28 +132,27 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Replace:"
+                android:text="Price:"
                 android:id="@+id/textView74" android:layout_below="@+id/textView72"
                 android:layout_alignParentStart="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Terminal:"
+                android:text="Supplier:"
                 android:id="@+id/textView76" android:layout_below="@+id/textView74"
                 android:layout_alignParentStart="true"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/ratingBar5"
+                android:id="@+id/ratingBar7"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_alignStart="@+id/textView73" android:layout_above="@+id/textView76"
-                android:stepSize="0.5"/>
+                android:stepSize="0.5" android:layout_below="@+id/textView21" android:layout_toEndOf="@+id/dismiss"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/ratingBar6"
+                android:id="@+id/ratingBar8"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_alignBottom="@+id/textView76"
-                android:layout_alignStart="@+id/textView73" android:stepSize="0.5"/>
+                android:stepSize="0.5"
+                android:layout_below="@+id/textView68" android:layout_toEndOf="@+id/dismiss"/>
     </RelativeLayout>
 </LinearLayout>
