--- a/res/layout/bullsearch.xml
+++ b/res/layout/bullsearch.xml
@@ -82,28 +82,17 @@
     <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner5" android:layout_below="@+id/spinner4" android:layout_toLeftOf="@+id/radioButton4"
+            android:id="@+id/spinner5"
+            android:layout_below="@+id/spinner4"
+            android:layout_toLeftOf="@+id/radioButton4"
             android:layout_toStartOf="@+id/radioButton4"/>
     <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Select"
             android:id="@+id/radioButton5"
-            android:layout_alignBottom="@+id/spinner5" android:layout_toRightOf="@+id/spinner5"
-            android:layout_toEndOf="@+id/spinner5" android:checked="false"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Search by Code"
-            android:id="@+id/textView51" android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" android:layout_above="@+id/button5"/>
-    <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/editBull"
-            android:layout_alignBottom="@+id/textView51"
-            android:layout_alignLeft="@+id/button5"
-            android:layout_alignStart="@+id/button5"
-            android:text="Type must be selected"/>
+            android:layout_alignBottom="@+id/spinner5"
+            android:layout_toRightOf="@+id/spinner5"
+            android:layout_toEndOf="@+id/spinner5"
+            android:checked="false"/>
 </RelativeLayout>
