Mating updates adding pictures

--- a/res/layout/bullpicked.xml
+++ b/res/layout/bullpicked.xml
@@ -23,8 +23,7 @@
                 android:text="New Text"
                 android:id="@+id/textView23"
                 android:layout_below="@+id/textView28"
-                android:layout_alignLeft="@+id/textView40"
-                android:layout_alignStart="@+id/textView40"/>
+                android:layout_alignEnd="@+id/textView28"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -78,9 +77,8 @@
                 android:layout_height="wrap_content"
                 android:text="ReplaceStar:"
                 android:id="@+id/textView31"
-                android:layout_below="@+id/textView30"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignTop="@+id/ratingBar2"
+                android:layout_alignEnd="@+id/textView16"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -88,46 +86,44 @@
                 style="?android:attr/ratingBarStyleSmall"
                 android:layout_below="@+id/textView29"
                 android:layout_alignLeft="@+id/textView29"
-                android:layout_alignStart="@+id/textView29" android:stepSize="0.5"/>
+                android:layout_alignStart="@+id/textView29"
+                android:stepSize="0.5"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="replaceStar:"
+                android:text="Carcass Wt. Ind:"
                 android:id="@+id/textView33"
-                android:layout_above="@+id/textView32"
-                android:layout_alignRight="@+id/textView26"
-                android:layout_alignEnd="@+id/textView26"/>
+                android:layout_alignTop="@+id/textView34"
+                android:layout_alignStart="@+id/textView39"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView34"
-                android:layout_below="@+id/ratingBar2"
-                android:layout_alignLeft="@+id/ratingBar2"
+                android:layout_below="@+id/textView51"
                 android:layout_alignStart="@+id/ratingBar2"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DAM"
+                android:textStyle="bold"
                 android:id="@+id/textView28"
                 android:layout_centerHorizontal="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SIRE"
+                android:textStyle="bold"
                 android:id="@+id/textView32"
-                android:layout_marginTop="25dp"
-                android:layout_below="@+id/textView34"
-                android:layout_alignLeft="@+id/textView28"
-                android:layout_alignStart="@+id/textView28"/>
+                android:layout_centerVertical="true"
+                android:layout_alignStart="@+id/textView94"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Rank:"
                 android:id="@+id/textView35"
-                android:layout_alignTop="@+id/textView40"
-                android:layout_alignRight="@+id/textView44"
-                android:layout_alignEnd="@+id/textView44"/>
+                android:layout_below="@+id/textView32"
+                android:layout_alignStart="@+id/textView36"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -165,33 +161,30 @@
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView40"
-                android:layout_below="@+id/textView32"
-                android:layout_alignLeft="@+id/textView41"
-                android:layout_alignStart="@+id/textView41"/>
+                android:layout_above="@+id/textView36"
+                android:layout_alignStart="@+id/textView32"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView41"
                 android:layout_below="@+id/textView40"
-                android:layout_alignLeft="@+id/textView42"
-                android:layout_alignStart="@+id/textView42"/>
+                android:layout_alignStart="@+id/textView32"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView42"
-                android:layout_below="@+id/textView41"
-                android:layout_alignLeft="@+id/textView43"
-                android:layout_alignStart="@+id/textView43"/>
+                android:layout_above="@+id/textView43"
+                android:layout_alignStart="@+id/textView41"
+                android:layout_alignParentEnd="true"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Text"
                 android:id="@+id/textView43"
-                android:layout_below="@+id/textView42"
-                android:layout_alignLeft="@+id/ratingBar4"
-                android:layout_alignStart="@+id/ratingBar4"/>
+                android:layout_alignTop="@+id/textView38"
+                android:layout_alignStart="@+id/textView42"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -205,21 +198,21 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingBar3"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_above="@+id/ratingBar4"
-                android:layout_alignLeft="@+id/ratingBar4"
-                android:layout_alignStart="@+id/ratingBar4" android:stepSize="0.5"/>
+                android:stepSize="0.5"
+                android:layout_below="@+id/textView43" android:layout_alignStart="@+id/ratingBar4"/>
         <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/ratingBar4"
                 style="?android:attr/ratingBarStyleSmall"
-                android:layout_alignTop="@+id/textView44"
-                android:layout_centerHorizontal="true" android:stepSize="0.5"/>
+                android:stepSize="0.5"
+                android:layout_below="@+id/textView39" android:layout_alignStart="@+id/textView94"/>
         <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Back"
+                android:onClick="back"
                 android:id="@+id/button6"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
@@ -242,17 +235,98 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="CALF"
-                android:id="@+id/textView16"
-                android:layout_below="@+id/textView44"
-                android:layout_alignRight="@+id/textView32"
-                android:layout_alignEnd="@+id/textView32"
-                android:layout_marginTop="36dp"/>
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Terminal:"
+                android:id="@+id/textView51"
+                android:layout_alignTop="@+id/ratingBar10"
+                android:layout_alignEnd="@+id/textView16"/>
+        <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar10"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_below="@+id/textView31"
+                android:layout_alignStart="@+id/textView34"
+                android:stepSize="0.5"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Star Rating:"
-                android:id="@+id/textView45"
-        />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Conformation:"
+                android:id="@+id/textView16"
+                android:layout_below="@+id/textView33"
+                android:layout_alignParentStart="true"/>
+        <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ratingBar11"
+                android:layout_alignTop="@+id/textView16"
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_alignStart="@+id/textView34"
+                android:stepSize="0.5"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Replacement:"
+                android:id="@+id/textView81"
+                android:layout_below="@+id/ratingBar11"
+                android:layout_alignEnd="@+id/textView16"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/textView92"
+                android:layout_below="@+id/textView16"
+                android:layout_alignStart="@+id/ratingBar11"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Terminal:"
+                android:id="@+id/textView93"
+                android:layout_below="@+id/textView92"
+                android:layout_alignEnd="@+id/textView81"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/textView94"
+                android:layout_below="@+id/textView92"
+                android:layout_alignStart="@+id/textView92"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="     Index:      €"
+                android:id="@+id/textView95"
+                android:layout_below="@+id/textView44"
+                android:layout_alignStart="@+id/textView51"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/textView96"
+                android:layout_alignTop="@+id/textView95"
+                android:layout_alignStart="@+id/ratingBar4"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Gestation:"
+                android:id="@+id/textView97"
+                android:layout_below="@+id/textView95"
+                android:layout_alignEnd="@+id/textView44"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/textView98"
+                android:layout_alignTop="@+id/textView97"
+                android:layout_alignStart="@+id/textView96"/>
     </RelativeLayout>
 </LinearLayout>
