--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent" 
-    android:layout_gravity="fill_horizontal" 
+    android:layout_gravity="fill_horizontal" android:background="@drawable/splash"
     android:orientation="vertical">
+
 	<TextView  
 	    android:layout_width="fill_parent" 
 	    android:layout_height="wrap_content" 
