--- a/res/layout/mating.xml
+++ b/res/layout/mating.xml
@@ -16,7 +16,7 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="0.05" android:id="@+id/layo">
+            android:id="@+id/layo">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="Set Date"
                 android:id="@+id/textView52"
                 android:layout_alignTop="@+id/textView50"
                 android:layout_alignLeft="@+id/ratingBar8"
@@ -114,20 +114,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Back"
+                android:onClick="back"
                 android:id="@+id/button8"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="66dp"
-                android:layout_toLeftOf="@+id/textView60"
-                android:layout_toStartOf="@+id/textView60"/>
+                android:layout_marginBottom="31dp"
+                android:layout_alignParentBottom="true" android:layout_alignParentStart="true"
+                android:layout_toStartOf="@+id/textView60" android:layout_alignEnd="@+id/textView60"/>
         <Button
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Confirm"
                 android:onClick="Confirm"
-                android:id="@+id/button9"
+                android:id="@+id/Confirm"
                 android:layout_alignTop="@+id/button8"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
@@ -151,9 +149,37 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Text"
+                android:text="Set Date"
                 android:id="@+id/textView49"
                 android:layout_below="@+id/textView52" android:layout_alignLeft="@+id/textView60"
                 android:layout_alignStart="@+id/textView60"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Replacement:"
+                android:id="@+id/textView45" android:layout_below="@+id/textView59"
+                android:layout_alignParentStart="true"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="N/A"
+                android:id="@+id/textView99"
+                android:layout_alignTop="@+id/textView45" android:layout_toEndOf="@+id/textView60"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Terminal:"
+                android:id="@+id/textView100"
+                android:layout_below="@+id/textView45" android:layout_alignEnd="@+id/textView57"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="N/A"
+                android:id="@+id/textView101"
+                android:layout_below="@+id/textView99" android:layout_alignStart="@+id/textView99"/>
     </RelativeLayout>
 </LinearLayout>
